--- a/Index.html
+++ b/Index.html
@@ -39,7 +39,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Website</h1>
+        <h1>Calculators</h1>
     </header>
     
     <nav>
