--- a/Index.html
+++ b/Index.html
@@ -43,8 +43,8 @@
     </header>
     
     <nav>
-        <a href="index.html">Home</a>
-        <a href="https://eddiechilli.github.io/Calculators/Daily.html">Page 2</a>
+        <a href="Index.html">Home</a>
+        <a href="Daily.html">Page 2</a>
         <a href="page3.html">Page 3</a>
         <a href="page4.html">Page 4</a>
         <a href="page5.html">Page 5</a>
