--- a/Index.html
+++ b/Index.html
@@ -44,7 +44,7 @@
     
     <nav>
         <a href="Index.html">Home</a>
-        <a href="Daily.html">Page 2</a>
+        <a href="Daily.html">Daily</a>
         <a href="page3.html">Page 3</a>
         <a href="page4.html">Page 4</a>
         <a href="page5.html">Page 5</a>
